--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,6 @@ libzeropool-zkbob = "1.3.0"
 ethers = "2.0.10"
 hex = "0.4.3"
 derive_more = "0.99.17"
+reqwest = "0.11.23"
+ecies = {version = "0.2.6", features = ["std"]}
+openssl = "0.10.57"
