--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ derive_more = "0.99.17"
 reqwest = "0.11.23"
 ecies = {version = "0.2.6", features = ["std"]}
 openssl = "0.10.57"
+flate2 = "1.0.28"
