--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 libzeropool-zkbob = "1.3.0"
 ethers = "2.0.10"
+log = "0.4"
 hex = "0.4.3"
 derive_more = "0.99.17"
 reqwest = "0.11.23"
